@@ -1,6 +1,9 @@
 version 2.62
             Update German translation. Thanks to Conrad Kostecki.
 
+	    Cope with router-solict packets wich don't have a valid 
+	    source address. Thanks to Vladislav Grishenko for the patch.
+
 
 version 2.61
 	    Re-write interface discovery code on *BSD to use
